--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -6,7 +6,6 @@
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Naval_officer_s_purge:0 "海軍士官を粛軍"
  JAP_Agrarian_watchdog:0 "農本主義者を監視"
- JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Keisuke_Okada:0 "岡田啓介"
@@ -40,14 +39,35 @@
  JAP_Implementation_of_civilian_control:0 "文民統制の実施"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
- JAP_New_institutional_movement:0 "新体制運動"
- JAP_Formation_of_the_Koaha:0 "興亜派の結成"
- JAP_East_Asia_Cooperativism:0 "東亜協同体論"
- JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
- JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
  JAP_The_New_One_Nation_Movement:0 "一國新体制運動論"
+ JAP_The_greatest_divine_weapon_of_the_Orient:0 "東洋最大の神器"
+ JAP_Japan's_lifeline:0 "日本の生命線"
+ JAP_Building_a_highly_military_state:0 "高度軍事国家の建設"
+ JAP_Japan-Manchuria_Economic_Bloc:0 "日満支経済ブロックの構築"
  JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
+ JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "フィリピンでのスペイン語の使用の禁止を撤回"
+ JAP_Agreement_on_the_Communist_Cominform_of_the_West_Bank:0 "西班牙国ノ共産「コミンフォルム」ニ対スル協定"
+ JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
+ JAP_Cooperation_of_the_Imperialists:0 "皇道派の協力"
+ JAP_A_blow_to_the_nation:0 "国家に対する打撃"
+ JAP_Suspension_of_the_Constitution:0 "憲法の停止"
+ JAP_Dissolution_of_both_Houses:0 "両院を解散"
+ JAP_Martial_law_throughout_the_country:0 "全国での戒嚴令"
+ JAP_Start_of_the_Showa_Restoration:0 "昭和維新を開始"
+ JAP_Elimination_of_the_privileged_class:0 "特権階級の排除"
+ JAP_Formation_of_Konoe_New_Party:0 "近衛新党を結成"
+ JAP_Re-acceleration_of_the_new_regime_movement:0 "新体制運動を再加速"
+ JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
+ JAP_Building_the_Pacific_Economic_Bloc:0 "太平洋経済ブロックの構築"
+ JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
+ JAP_Abolition_of_the_private_property_system:0 "私有財産制の廃止"
+ JAP_Competition_with_the_imperialist_powers:0 "帝国主義列強との競争"
+ JAP_Cooperation_of_control_groups:0 "統制派の協力"
+ JAP_Establishment_of_Greater_East_Asia_Common_Economic_Area:0 "大東亜共同経済圏を確立"
+ JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
+ JAP_Response_to_total_war:0 "総力戦への対応"
+ JAP_Dominate_the_continent:0 "大陸を支配せよ!"
  JAP_Japan-Spain_Alliance:0 "日西同盟"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
