--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -39,15 +39,16 @@
  JAP_Implementation_of_civilian_control:0 "文民統制の実施"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
- JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
- JAP_The_New_One_Nation_Movement:0 "一國新体制運動論"
- JAP_The_greatest_divine_weapon_of_the_Orient:0 "東洋最大の神器"
- JAP_Japan's_lifeline:0 "日本の生命線"
- JAP_Building_a_highly_military_state:0 "高度軍事国家の建設"
- JAP_Japan-Manchuria_Economic_Bloc:0 "日満支経済ブロックの構築"
- JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
+ JAP_Konoe_Diplomacy:0 "近衛外交"
+ JAP_Negotiations_with_Spain:0 "スペインとの交渉"
  JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "フィリピンでのスペイン語の使用の禁止を撤回"
  JAP_Agreement_on_the_Communist_Cominform_of_the_West_Bank:0 "西班牙国ノ共産「コミンフォルム」ニ対スル協定"
+ JAP_Japan-Spain_Alliance:0 "日西同盟"
+ JAP_Shigemitsu-Bramglia_Agreement:0 "重光・ブラムグリア協定"
+ JAP_Japan-Argentina_relations:0 "日亜同盟"
+ JAP_Timor_return:0 "ティモール返還"
+ JAP_Shigemitsu-Salazar_Agreement:0 "重光・サラザール協定"
+ JAP_Japanese-Portuguese_Alliance:0 "日葡同盟"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Cooperation_of_the_Imperialists:0 "皇道派の協力"
  JAP_A_blow_to_the_nation:0 "国家に対する打撃"
@@ -68,7 +69,6 @@
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Response_to_total_war:0 "総力戦への対応"
  JAP_Dominate_the_continent:0 "大陸を支配せよ!"
- JAP_Japan-Spain_Alliance:0 "日西同盟"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
  JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
