--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -40,15 +40,24 @@
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Konoe_Diplomacy:0 "近衛外交"
- JAP_Negotiations_with_Spain:0 "スペインとの交渉"
+ JAP_Our_relationship_with_the_sick_in_Europe:0 "ヨーロッパの病人との関係"
+ JAP_Argentina's_support_in_the_Falkland_Islands_dispute:0 "フォークランド諸島問題におけるアルゼンチンの支持"
+ JAP_The_Malayan_problem:0 "マラヤ問題"
+ JAP_Support_for_the_Malayan_People's_Anti-British_Army:0 "マラヤ人民抗英軍の支援"
+ JAP_Education_for_the_Borneo_Volunteer_Army:0 "ボルネオ義勇軍の教育"
+ JAP_The_Southern_Approach:0 "南進論"
+ JAP_Our_relationship_with_the_collapsed_free_world:0 "崩壊した自由の国との関係"
  JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "フィリピンでのスペイン語の使用の禁止を撤回"
- JAP_Agreement_on_the_Communist_Cominform_of_the_West_Bank:0 "西班牙国ノ共産「コミンフォルム」ニ対スル協定"
- JAP_Japan-Spain_Alliance:0 "日西同盟"
- JAP_Shigemitsu-Bramglia_Agreement:0 "重光・ブラムグリア協定"
- JAP_Japan-Argentina_relations:0 "日亜同盟"
  JAP_Timor_return:0 "ティモール返還"
- JAP_Shigemitsu-Salazar_Agreement:0 "重光・サラザール協定"
- JAP_Japanese-Portuguese_Alliance:0 "日葡同盟"
+ JAP_Alaska_heights_expand:0 "阿拉斯加へ影響力拡大"
+ JAP_Extension_of_influence_in_Californian:0 "加利福尼亜へ影響力拡大"
+ JAP_Eastern_Progressive_Theory:0 "東進論"
+ JAP_The_relationship_with_the_missing_red_star:0 "欠けた赤い星との関係"
+ JAP_Eliminating_the_threat_of_Siberia:0 "シベリアの脅威を排除"
+ JAP_Supporting_Cossacks_in_the_Far_East:0 "極東のコサックを支援"
+ JAP_Management_of_the_Baikal-Amur_Railway:0 "バイカル・アムール鉄道の経営"
+ JAP_The_North_Advancement_Theory:0 "北進論"
+ JAP_No_more_Anglo-American_and_Soviet-oriented_imperialism:0 "英米ソ本位の帝国主義を排す"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Cooperation_of_the_Imperialists:0 "皇道派の協力"
  JAP_A_blow_to_the_nation:0 "国家に対する打撃"
