--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -10,6 +10,7 @@
  JAP_authoritative_democracy_party:0 "協同党"
  JAP_reactionary_authoritarianism_party:0 "立憲帝政党"
  JAP_national_populism_party:0 "国民同盟"
+ JAP_national_populism_party_Greater_Japan_Party:0 "大日本党"
  
  KOR_total_socialism_party:0 "朝鮮共産党"
  KOR_radical_socialism_party:0 "勤労人民党"
