--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -172,6 +172,7 @@
  JAP_Sake_is_Yonai_or_Yonai_is_sake:0 "酒が米内か、米内が酒か"
  JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
  JAP_Lord_Duke:0 "公爵閣下"
+ JAP_Innovation_bureaucrats:0 "革新官僚"
  JAP_Korean_Tiger:0 "朝鮮の虎"
  JAP_Commander-in-Chief_of_the_Southern_Army:0 "南方軍総司令官"
  JAP_The_commander_of_Operation_Ichi-Go:0 "一号作戦の指揮官"
