AKM, MOUの削除およびカリフォルニア脱退イベントを仮追加

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -9,6 +9,10 @@
  IRAN_empire_DEF:0 "イラン帝国"
  IRAN_empire_ADJ:0 "イラン"
  
+ MOUNTAIN_republic:0 "山岳共和国"
+ MOUNTAIN_republic_DEF:0 "山岳共和国"
+ MOUNTAIN_republic_ADJ:0 "山岳"
+ 
  MOUNTAIN-ARMENIA_republic:0 "山岳アルメニア共和国"
  MOUNTAIN-ARMENIA_republic_DEF:0 "山岳アルメニア共和国"
  MOUNTAIN-ARMENIA_republic_ADJ:0 "山岳アルメニア"
