--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -23,21 +23,40 @@
  JAP_10:0 ""
  JAP_The_Soviet-Japanese_Alliance:0 "日ソ同盟"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
- JAP_Five_Reform_Directives:0 "五大改革指令"
- JAP_Suzuki_Nomics:0 "鈴木ノミクス"
- JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
- JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
- JAP_Establishment_of_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会の設置"
- JAP_Establishment_of_the_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所の設立"
- JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
+ JAP_Suzuki_Diplomacy:0 "鈴木外交"
+ JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英国国王の王冠にはめ込まれた最大の宝石"
+ JAP_Joint_exercises_with_British_and_Indian_forces:0 "英印軍との合同演習"
  JAP_Signing_of_the_India-Japan_Trade_Agreement:0 "日印貿易協定の締結"
- JAP_Signing_of_the_Basic_Treaty_of_Friendship_and_Co-operation_between_Australia_and_Japan:0 "日豪友好協力基本条約の締結"
- JAP_Conclusion_of_Japan-New_Zealand_Trade_Agreement:0 "日新通商協定の締結"
- JAP_British_Malayan_Tina:0 "英領マレーの錫"
+ JAP_A_free_and_open_Indian_Ocean:0 "自由で開かれた印度洋"
+ JAP_And_another_land_where_the_sun_never_sets:0 "そしてもう一つの太陽の沈まぬ国"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_British_Malaya_Tin:0 "英領マラヤの錫"
+ JAP_Establishment_of_the_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所の設立"
+ JAP_Establishment_of_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会の設置"
+ JAP_Joint_exercises_with_the_Royal_Navy:0 "英国海軍との合同演習"
+ JAP_The_Pacific_Ocean_is_as_the_name_suggests_an_ocean_of_peace:0 "太平洋は名の如く平和の洋"
+ JAP_Relationship_with_Australasia:0 "オーストララシアとの関係"
+ JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
+ JAP_A_free_and_open_Pacific:0 "自由で開かれた太平洋"
+ JAP_Investment_in_Kanada_Pacific_Railway:0 "加奈陀太平洋鉄道へ投資"
  JAP_The_Fourth_Japanese-British_Alliance:0 "第四次日英同盟"
+ JAP_Exclusion_of_hawkers:0 "鷹派の排除"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Implementation_of_civilian_control:0 "文民統制の実施"
+ JAP_Hedgehog_Defence_Theory:0 "針鼠防衛論"
+ JAP_Anti-communist_bulwark:0 "反共の防波堤"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
+ JAP_Towa_No_Heiwa:0 "永遠の平和"
+ JAP_Start_of_liberalisation:0 "自由化の開始"
+ JAP_Women's_suffrage:0 "婦人参政権"
+ JAP_Repeal_of_oppressive_legislation:0 "圧政的な法制度の撤廃"
+ JAP_Democratisation_of_the_economy:0 "経済の民主化"
+ JAP_Enactment_of_trade_union_law:0 "労働組合法の制定"
+ JAP_Agricultural_Land_Reform:0 "農地改革"
+ JAP_Education_Reform:0 "教育改革"
+ JAP_The_liberal_states_of_the_East:0 "東洋の自由主義国家"
+ JAP_Democracy:0 "民主主義"
+ JAP_Minpon_Shugi:0 "民本主義"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Konoe_Diplomacy:0 "近衛外交"
  JAP_Our_relationship_with_the_sick_in_Europe:0 "ヨーロッパの病人との関係"
@@ -70,7 +89,7 @@
  JAP_Re-acceleration_of_the_new_regime_movement:0 "新体制運動を再加速"
  JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
  JAP_Building_the_Pacific_Economic_Bloc:0 "太平洋経済ブロックの構築"
- JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
+ JAP_Don't_miss_the_bus:0 "バスに乗り遅れるな"
  JAP_Abolition_of_the_private_property_system:0 "私有財産制の廃止"
  JAP_Competition_with_the_imperialist_powers:0 "帝国主義列強との競争"
  JAP_Cooperation_of_control_groups:0 "統制派の協力"
