長らく作業できてなくてごめんなさい

--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -54,7 +54,8 @@
  geacps_debug_menu_unused:0 "特になし"
  geacps_debug_menu_world_event:0 "世界的事件"
  geacps_debug_menu_tab_country_event_text:0 "国家的事件"
- 
+ geacps_special_event:0 "スペシャルイベント"
+
 #デバッグディシジョン
  debug_decisions:0 "デバッグディシジョン"
  debug_special_event_test:0 "テストSE"
