--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -1,25 +1,42 @@
 ﻿l_english:
  geacps_special_event.t:0 "時計"
- 
+
  SE_SECOND_ACW_TITLE:0 "Second America Civil War"
  SE_SECOND_ACW_TEXT:0 "War, War is never change"
  
- special_event_title_2020:0 "あすぱら記念日"
- special_event_desc_2020:0 "あすぱらぱら"
- special_event_exit_2020:0 "§Bライスシャワー!"
+ se_ZZZ_test_event_t:0 "あすぱら記念日"
+ se_ZZZ_test_event_d:0 "あすぱらぱら"
+ se_ZZZ_test_event_b:0 "§Bライスシャワー!"
 
- special_event_title_nepal:0 "幸福の国"
- special_event_desc_nepal:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
- special_event_exit_nepal:0 "§B常に幸福を！"
- special_event_title_EGR_unification:0 "ドイツ再統一"
- special_event_desc_EGR_unification:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
- special_event_exit_EGR_unification:0 "もう誰も悲しまない世へ"
- special_event_title_WGR_unification:0 "ドイツ再統一"
- special_event_desc_WGR_unification:0 "肝心なのは、我々が歴史を作るのだ。\n書くのではない。\n-オットー・フォン・ビスマルク"
- special_event_exit_WGR_unification:0 "ドイツに栄光を！"
+ se_NEP_greater_nepal_t:0 "グルカの国"
+ se_NEP_greater_nepal_d:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
+ se_NEP_greater_nepal_b:0 "§B日本でインド料理してる人が多い国！"
 
+ se_GER_reunification_by_democratic_republic_t:0 "ドイツ再統一"
+ se_GER_reunification_by_democratic_republic_d:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
+ se_GER_reunification_by_democratic_republic_b:0 "もう誰も悲しまない世へ"
 
-special_event_nepal:0 "ネパール国歌"
-special_event_test:0 "なんの変哲もない音声"
-special_event_EGR_unification:0 "Auferstanden aus Ruinen\n廃墟からの復活"
-special_event_WGR_unification:0 "ドイツ統一行進曲"
+ se_GER_reunification_by_hohenzollern_t:0 "ドイツ再統一"
+ se_GER_reunification_by_hohenzollern_d:0 "肝心なのは、我々が歴史を作るのだ。\n書くのではない。\n-オットー・フォン・ビスマルク"
+ se_GER_reunification_by_hohenzollern_b:0 "ドイツに栄光を！"
+
+ se_GER_reunification_by_republic_t:0 "ドイツ統一"
+ se_GER_reunification_by_republic_d:0 ""
+ se_GER_reunification_by_republic_b:0 "共和国に栄光を！"
+
+Sayaun_Thunga_Phulka:0 "ネパール国歌"
+Test_Song_1:0 "なんの変哲もない音声"
+Auferstanden_aus_Ruinen:0 "Auferstanden aus Ruinen 廃墟からの復活"
+Marsch_des_einigen_Deutschlands:0 "ドイツ統一行進曲"
+Aiba_Shingunka:0 "愛馬進軍歌"
+Hijos_del_pueblo_Spanish:0 "Hijos del pueblo"
+Hotaru_No_Hikari:0 "蛍の光"
+I_Vow_to_Thee_My_Country:0 "我は汝に誓う、わが祖国よ"
+Kigen_2600nen:0 "紀元2600年"
+Koushinkyoku_Aikoku:0 "愛国行進曲"
+Koushinkyoku_Kimigayo:0 "君が代行進曲"
+Koushinkyoku_Oomikotonori_houkan:0 "大詔奉戴行進曲"
+Koushinkyoku_Taiheiyou:0 "太平洋行進曲"
+Napkeleti_vizeken:0 "愛国行進曲(ハンガリー語版)"
+Nihonkai_Kaisen_Kousinkyoku:0 "日本海海戦"
+Yuki_No_Shingun:0 "雪の進軍"
