--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1216,6 +1216,10 @@
  FEZ_DEF:0 "フェザーン"
  FEZ_ADJ:0 "フェザーン"
  
+ IFN:0 "イフニ"
+ IFN_DEF:0 "イフニ"
+ IFN_ADJ:0 "イフニ"
+ 
  LSO:0 "レソト"
  LSO_DEF:0 "レソト"
  LSO_ADJ:0 "レソト"
@@ -1235,6 +1239,10 @@
  REU:0 "レユニオン"
  REU_DEF:0 "レユニオン"
  REU_ADJ:0 "レユニオン"
+ 
+ SCZ:0 "スエズ運河地帯"
+ SCZ_DEF:0 "スエズ運河地帯"
+ SCZ_ADJ:0 "スエズ運河地帯"
  
  SML:0 "ソマリランド"
  SML_DEF:0 "ソマリランド"
@@ -1324,6 +1332,10 @@
  NFL:0 "ニューファンドランド"
  NFL_DEF:0 "ニューファンドランド"
  NFL_ADJ:0 "ニューファンドランド"
+ 
+ PCZ:0 "パナマ運河地帯"
+ PCZ_DEF:0 "パナマ運河地帯"
+ PCZ_ADJ:0 "パナマ運河地帯"
  
  SBL:0 "サン・バルテルミー"
  SBL_DEF:0 "サン・バルテルミー"
