--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1312,6 +1312,9 @@
  FEZ_republic:0 "フェザーン共和国"
  FEZ_republic_DEF:0 "フェザーン共和国"
  
+ #IFN:0 "イフニ"
+ #IFN_DEF:0 "イフニ"
+ 
  LSO_kingdom:0 "レソト王国"
  LSO_kingdom_DEF:0 "レソト王国"
  
@@ -1399,6 +1402,9 @@
  
  NFL_republic:0 "ニューファンドランド共和国"
  NFL_republic_DEF:0 "ニューファンドランド共和国"
+ 
+ #PCZ:0 "パナマ運河地帯"
+ #PCZ_DEF:0 "パナマ運河地帯"
  
  SBL_republic:0 "サン・バルテルミー共和国"
  SBL_republic_DEF:0 "サン・バルテルミー共和国"
