--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -861,7 +861,7 @@
  STATE_860:0 "シワン"
  STATE_861:0 "ジャールカンド"
  STATE_862:0 "アラー"
- STATE_863:0 "昭南島"
+ STATE_863:0 "シンガポール"
  STATE_864:0 "シャン"
  STATE_865:0 "チャンディーガル"
  STATE_866:0 "ナーグプル"
@@ -1236,3 +1236,5 @@
  STATE_1235:0 "島"
  STATE_1236:0 "バーレーン"
  STATE_1237:0 "シェパード諸島"
+ STATE_1238:0 "ジュビー岬"
+ STATE_1239:0 "間宮"
