ステート名変更など

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -266,8 +266,8 @@
  STATE_265:0 "ミハイロフカ"
  STATE_266:0 "テヘラン"
  STATE_267:0 "カブール"
- STATE_268:0 "フランス領ソマリランド"
- STATE_269:0 "イギリス領ソマリランド"
+ STATE_268:0 "ジブチ"
+ STATE_269:0 "ソマリランド"
  STATE_270:0 "ピトケアン島"
  STATE_271:0 "エチオピア"
  STATE_272:0 "セネガル"
@@ -288,13 +288,13 @@
  STATE_287:0 "ホータン"
  STATE_288:0 "マンダレー"
  STATE_289:0 "タイ中部"
- STATE_290:0 "スペイン領アフリカ"
+ STATE_290:0 "モロッコ北部"
  STATE_291:0 "バグダード"
  STATE_292:0 "ナジュド"
  STATE_293:0 "イエメン"
  STATE_294:0 "オマーン"
  STATE_295:0 "レオポルドヴィル"
- STATE_296:0 "ポルトガル領ギニア"
+ STATE_296:0 "ギニア・ビサウ"
  STATE_297:0 "赤道ギニア"
  STATE_298:0 "リベリア"
  STATE_299:0 "フォークランド諸島"
@@ -308,8 +308,8 @@
  STATE_307:0 "ミランダ"
  STATE_308:0 "リーワード諸島"
  STATE_309:0 "スリナム"
- STATE_310:0 "フランス領ギアナ"
- STATE_311:0 "イギリス領ホンジュラス"
+ STATE_310:0 "カイエンヌ"
+ STATE_311:0 "ベリーズ"
  STATE_312:0 "ホンジュラス"
  STATE_313:0 "グアテマラ"
  STATE_314:0 "エルサルバドル"
@@ -318,7 +318,7 @@
  STATE_317:0 "ニカラグア"
  STATE_318:0 "ハイチ"
  STATE_319:0 "ドミニカ"
- STATE_320:0 "フランス領インド"
+ STATE_320:0 "ポンディシェリ"
  STATE_321:0 "ゴア"
  STATE_322:0 "ナクチュ"
  STATE_323:0 "ネパール"
@@ -406,7 +406,7 @@
  STATE_405:0 "タシュケント"
  STATE_406:0 "クルサリー"
  STATE_407:0 "ウラリスク"
- STATE_408:0 "沿岸"
+ STATE_408:0 "沿海"
  STATE_409:0 "ハバロフスク"
  STATE_410:0 "スィースターン"
  STATE_411:0 "エスファハーン"
@@ -683,16 +683,16 @@
  STATE_682:0 "オンタリオ北部"
  STATE_683:0 "カナダ北東部"
  STATE_684:0 "カロリン諸島"
- STATE_685:0 "パナマ運河"
+ STATE_685:0 "パナマ運河地帯"
  STATE_686:0 "プエルトリコ"
- STATE_687:0 "イギリス領ガイアナ"
+ STATE_687:0 "ガイアナ"
  STATE_688:0 "北方チャコ"
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
  STATE_691:0 "トリニダード"
  STATE_692:0 "ウィンドワード諸島"
  STATE_693:0 "バハマ南部"
- STATE_694:0 "フランス領アンティル"
+ STATE_694:0 "グアドループ島"
  STATE_695:0 "キュラソー"
  STATE_696:0 "バミューダ"
  STATE_697:0 "マデイラ"
@@ -719,7 +719,7 @@
  STATE_718:0 "スタンリーヴィル"
  STATE_719:0 "ナタール"
  STATE_720:0 "サウスジョージア"
- STATE_721:0 "ポルトガル領ティモール"
+ STATE_721:0 "東ティモール"
  STATE_722:0 "ペチェンガ"
  STATE_723:0 "南島"
  STATE_724:0 "タイ南部"
@@ -901,7 +901,7 @@
  STATE_900:0 "襄陽"
  STATE_901:0 "宜春"
  STATE_902:0 "臨汾"
- STATE_903:0 "スエズ"
+ STATE_903:0 "スエズ運河地帯"
  STATE_904:0 "北シュレースヴィヒ"
  STATE_905:0 "クフラ"
  STATE_906:0 "チュクチ"
@@ -1226,7 +1226,7 @@
  STATE_1225:0 "セント・クロイ島"
  STATE_1226:0 "トルトラ島"
  STATE_1227:0 "ヴァージン・ゴルダ島"
- STATE_1228:0 ""
+#STATE_1228:0 ""
  STATE_1229:0 "ヨスト・ヴァン・ダイク島"
  STATE_1230:0 "モントセラト島"
  STATE_1231:0 "アルバ島"
