--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -100,9 +100,9 @@
  MAN_DEF:0 "満州"
  MAN_ADJ:0 "満州"
  
- MEN:0 "蒙疆"
- MEN_DEF:0 "蒙疆"
- MEN_ADJ:0 "蒙疆"
+ MEN:0 "蒙古"
+ MEN_DEF:0 "蒙古"
+ MEN_ADJ:0 "蒙古"
  
  MLD:0 "モルディブ"
  MLD_DEF:0 "モルディブ"
