--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -167,8 +167,8 @@
  MAN_state:0 "満州国"
  MAN_state_DEF:0 "満州国"
  
- MEN_autonomous_federation:0 "蒙疆自治邦"
- MEN_autonomous_federation_DEF:0 "蒙疆自治邦"
+ MEN_autonomous_federation:0 "蒙古自治邦"
+ MEN_autonomous_federation_DEF:0 "蒙古自治邦"
  
  MLD_sultanate:0 "モルディブ・スルタン国"
  MLD_sultanate_DEF:0 "モルディブ・スルタン国"
