--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -200,7 +200,7 @@
  VICTORY_POINTS_306:0 "スモレンスク"
  VICTORY_POINTS_413:0 "ヴォロネジ"
  VICTORY_POINTS_418:0 "ハリコフ"
- VICTORY_POINTS_957:0 "浦塩斯徳"
+ VICTORY_POINTS_957:0 "ウラジオストク"
  VICTORY_POINTS_1278:0 "ウファ"
  VICTORY_POINTS_1459:0 "タシュケント"
  VICTORY_POINTS_1591:0 "アルマ・アタ"
