中華系国家の追加

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -898,6 +898,10 @@
  HEN_DEF:0 "河南"
  HEN_ADJ:0 "河南"
  
+ HIN:0 "海南"
+ HIN_DEF:0 "海南"
+ HIN_ADJ:0 "海南"
+ 
  HKG:0 "香港"
  HKG_DEF:0 "香港"
  HKG_ADJ:0 "香港"
@@ -982,6 +986,10 @@
  QIG_DEF:0 "青海"
  QIG_ADJ:0 "青海"
  
+ QIN:0 "青島"
+ QIN_DEF:0 "青島"
+ QIN_ADJ:0 "青島"
+ 
  RYU:0 "琉球"
  RYU_DEF:0 "琉球"
  RYU_ADJ:0 "琉球"
@@ -1053,6 +1061,10 @@
  XIK:0 "西康"
  XIK_DEF:0 "西康"
  XIK_ADJ:0 "西康"
+ 
+ XIZ:0 "西藏"
+ XIZ_DEF:0 "西藏"
+ XIZ_ADJ:0 "西藏"
  
  YML:0 "ヤマリア"
  YML_DEF:0 "ヤマリア"
