--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1043,6 +1043,9 @@
  HEN_warlord:0 "河南軍閥"
  HEN_warlord_DEF:0 "河南軍閥"
  
+ HIN_warlord:0 "海南軍閥"
+ HIN_warlord_DEF:0 "海南軍閥"
+ 
  HKG_republic:0 "香港民国"
  HKG_republic_DEF:0 "香港民国"
  HKG_warlord:0 "香港軍閥"
@@ -1111,6 +1114,9 @@
  QIG_warlord_DEF:0 "青海軍閥"
  QIG_ma_warlord:0 "青海馬家軍閥"
  QIG_ma_warlord_DEF:0 "青海馬家軍閥"
+ 
+ QIN_warlord:0 "青島軍閥"
+ QIN_warlord_DEF:0 "青島軍閥"
  
  RYU_kingdom:0 "琉球王国"
  RYU_kingdom_DEF:0 "琉球王国"
