--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -80,7 +80,7 @@
  LOADING_TIP_78: "「英米本位の平和主義を排す」\n- 近衛　文麿"
  LOADING_TIP_79: "日本はこんなに勝っているのか\n- 小磯　國昭"
  LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯　國昭"
- LOADING_TIP_81: "\n- "
+ LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
  LOADING_TIP_82: "\n- "
  LOADING_TIP_83: "\n- "
  LOADING_TIP_84: "\n- "
