傀儡化ディシジョン追加, エラー修正, 諜報機関画像変更

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -110,9 +110,17 @@
  ENG-WLS_republic_DEF:0 "イングランド＝ウェールズ共和国"
  ENG-WLS_republic_ADJ:0 "イングランド＝ウェールズ"
  
+ FLN-WLL_kingdom:0 "フランドル＝ワロン王国"
+ FLN-WLL_kingdom_DEF:0 "フランドル＝ワロン王国"
+ FLN-WLL_kingdom_ADJ:0 "フランドル＝ワロン"
+ 
  GER-AUS_republic:0 "ドイツ＝オーストリア共和国"
  GER-AUS_republic_DEF:0 "ドイツ＝オーストリア共和国"
  GER-AUS_republic_ADJ:0 "ドイツ＝オーストリア"
+ 
+ GRANDA_emirate:0 "グラナダ首長国"
+ GRANDA_emirate_DEF:0 "グラナダ首長国"
+ GRANDA_emirate_ADJ:0 "グラナダ"
  
  HOLY-MOUNTAIN_autonomous_monastic_state:0 "聖なる山自治修道士国"
  HOLY-MOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
