--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -290,8 +290,8 @@
  YUN_warlord_DEF:0 "雲南軍閥"
  
 #ヨーロッパ
- ADU_state:0 "アンダルシア国"
- ADU_state_DEF:0 "アンダルシア国"
+ ADU_republic:0 "アンダルシア共和国"
+ ADU_republic_DEF:0 "アンダルシア共和国"
  
  ALB_democratic_government:0 "アルバニア民主政府"
  ALB_democratic_government_DEF:0 "アルバニア民主政府"
@@ -319,8 +319,12 @@
  AUS_republic:0 "オーストリア共和国"
  AUS_republic_DEF:0 "オーストリア共和国"
  
+ BAY_duchy:0 "バイエルン公国"
+ BAY_duchy_DEF:0 "バイエルン公国"
  BAY_kingdom:0 "バイエルン王国"
  BAY_kingdom_DEF:0 "バイエルン王国"
+ BAY_replublic:0 "バイエルン共和国"
+ BAY_replublic_DEF:0 "バイエルン共和国"
  
  BEL_kingdom:0 "ベルギー王国"
  BEL_kingdom_DEF:0 "ベルギー王国"
