--- a/localisation/_geacps_release_l_english.yml
+++ b/localisation/_geacps_release_l_english.yml
@@ -6,14 +6,14 @@
  fate_of_AFG.1.1:0 "大アフガニスタンに従順な国家を"
  fate_of_AFG.1.2:0 "友に分け与えよう！"
  fate_of_AFG.1.3:0 "アフガニスタンは我が領土である"
- fate_of_AFG.2.t:0 "アフガニスタンの運命"
+ fate_of_AFG.2.t:0 "アフガニスタンの運命-政体"
  fate_of_AFG.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_AFG.2.0:0 "王国として解放"
  fate_of_AFG.2.1:0 "首長国として解放"
  fate_of_AFG.2.2:0 "共和国として解放"
  fate_of_AFG.2.3:0 "イスラム共和国として解放"
  fate_of_AFG.2.4:0 "アフガニスタンはソビエト一部であろう?"
- fate_of_AFG.3.t:0 "アフガニスタンの運命"
+ fate_of_AFG.3.t:0 "アフガニスタンの運命-分割"
  fate_of_AFG.3.d:0 "アフガニスタン地域をどのように与えるべきだろうか"
  fate_of_AFG.3.0:0 "全土を$IND$に与えよう"
  fate_of_AFG.3.1:0 "全土を$PAK$に与えよう"
@@ -26,11 +26,11 @@
  fate_of_ARM.1.1:0 "統一アルメニアに従順な国家を"
  fate_of_ARM.1.2:0 "友に分け与えよう！"
  fate_of_ARM.1.3:0 "アルメニアは我が領土である"
- fate_of_ARM.2.t:0 "アルメニアの運命"
+ fate_of_ARM.2.t:0 "アルメニアの運命-政体"
  fate_of_ARM.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_ARM.2.0:0 "共和国として解放"
  fate_of_ARM.2.1:0 "アルメニアはソビエト一部であろう?"
- fate_of_ARM.3.t:0 "アルメニアの運命"
+ fate_of_ARM.3.t:0 "アルメニアの運命-領土分割"
  fate_of_ARM.3.d:0 "アルメニア地域をどのように与えるべきだろうか"
  fate_of_ARM.3.0:0 "全土を$AZR$に与えよう"
  
@@ -41,7 +41,7 @@
  fate_of_AZR.1.1:0 "大アゼルバイジャンに従順な国家を"
  fate_of_AZR.1.2:0 "友に分け与えよう！"
  fate_of_AZR.1.3:0 "アゼルバイジャンは我が領土である"
- fate_of_AZR.2.t:0 "アゼルバイジャンの運命"
+ fate_of_AZR.2.t:0 "アゼルバイジャンの運命-政体"
  fate_of_AZR.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_AZR.2.0:0 "共和国として解放"
  fate_of_AZR.2.1:0 "アゼルバイジャンはソビエト一部であろう?"
@@ -53,11 +53,11 @@
  fate_of_BAN.1.1:0 "ベンガル全土に従順な国家を"
  fate_of_BAN.1.2:0 "友に分け与えよう！"
  fate_of_BAN.1.3:0 "バングラデシュは我が領土である"
- fate_of_BAN.2.t:0 "バングラデシュの運命"
+ fate_of_BAN.2.t:0 "バングラデシュの運命-政体"
  fate_of_BAN.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_BAN.2.0:0 "共和国として解放"
  fate_of_BAN.2.1:0 "バングラデシュはソビエト一部であろう?"
- fate_of_BAN.3.t:0 "バングラデシュの運命"
+ fate_of_BAN.3.t:0 "バングラデシュの運命-分割"
  fate_of_BAN.3.d:0 "バングラデシュ地域をどのように与えるべきだろうか"
  fate_of_BAN.3.0:0 "全土を$IND$に与えよう"
  fate_of_BAN.3.0:0 "全土を$PAK$に与えよう"
@@ -68,11 +68,11 @@
  fate_of_BHU.1.0:0 "ブータン地域のみに従順な国家を"
  fate_of_BHU.1.1:0 "友に分け与えよう！"
  fate_of_BHU.1.2:0 "ブータンは我が領土である"
- fate_of_BHU.2.t:0 "ブータンの運命"
+ fate_of_BHU.2.t:0 "ブータンの運命-政体"
  fate_of_BHU.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_BHU.2.0:0 "共和国として解放"
  fate_of_BHU.2.1:0 "ブータンはソビエト一部であろう?"
- fate_of_BHU.3.t:0 "ブータンの運命"
+ fate_of_BHU.3.t:0 "ブータンの運命-分割"
  fate_of_BHU.3.d:0 "ブータン地域をどのように与えるべきだろうか"
  fate_of_BHU.3.0:0 "全土を$IND$に与えよう"
  fate_of_BHU.3.1:0 "全土を$TIB$に与えよう"
@@ -83,11 +83,82 @@
  fate_of_BRM.1.0:0 "ビルマ地域のみに従順な国家を"
  fate_of_BRM.1.1:0 "友に分け与えよう！"
  fate_of_BRM.1.2:0 "ビルマは我が領土である"
- fate_of_BRM.2.t:0 "ビルマの運命"
+ fate_of_BRM.2.t:0 "ビルマの運命-政体"
  fate_of_BRM.2.d:0 "解放する国家はどのような政体が良いだろうか。"
  fate_of_BRM.2.0:0 "共和国として解放"
  fate_of_BRM.2.1:0 "ビルマはソビエト一部であろう?"
- fate_of_BRM.3.t:0 "ビルマの運命"
+ fate_of_BRM.3.t:0 "ビルマの運命-分割"
  fate_of_BRM.3.d:0 "ビルマ地域をどのように与えるべきだろうか"
  fate_of_BRM.3.0:0 "全土を$IND$に与えよう"
  
+ fate_of_ADU.1.t:0 "アンダルシアの運命"
+ fate_of_ADU.1.d:0 "占領したアンダルシア地域をどのようにすべきだろうか。"
+ fate_of_ADU.1.0:0 "ナスル朝グラナダ王国時代の形で解放せよ"
+ fate_of_ADU.1.1:0 "アンダルシア全域に従順な国家を"
+ fate_of_ADU.2.t:0 "アンダルシアの運命-政体"
+ fate_of_ADU.2.d:0 "解放する国家はどのような政体がよいだろうか？"
+ fate_of_ADU.2.0:0 "共和国として解放"
+ fate_of_ADU.2.1:0 "グレナダ首長国の復古を"
+ 
+ release_ALB:0 "アルバニアの運命"
+ fate_of_ALB.1.t:0 "アルバニアの運命"
+ fate_of_ALB.1.d:0 "占領したアルバニア地域をどのようにすべきだろうか。"
+ fate_of_ALB.1.0:0 "アルバニアに従順な国家を"
+# fate_of_ALB.1.1:0 "大アルバニアに従順な国家を"
+ fate_of_ALB.2.t:0 "アルバニアの運命-政体"
+ fate_of_ALB.2.d:0 "解放する国家はどのような政体がよいだろうか？"
+ fate_of_ALB.2.0:0 "王国として解放"
+ fate_of_ALB.2.1:0 "公国として解放"
+ fate_of_ALB.2.2:0 "共和国として解放"
+ 
+ release_AUS:0 "オーストリアの運命"
+ fate_of_AUS.1.t:0 "オーストリアの運命"
+ fate_of_AUS.1.d:0 "占領したオーストリア地域をどのようにすべきだろうか。"
+ fate_of_AUS.1.0:0 "オーストリアに従順な国家を"
+ fate_of_AUS.1.1:0 "過去の栄光を取り戻してやってもよいだろう"
+ fate_of_AUS.1.2:0 "新たなる栄光を与えてやろう"
+ fate_of_AUS.2.t:0 "オーストリアの運命-政体"
+ fate_of_AUS.2.d:0 ""
+ fate_of_AUS.2.0:0 "帝国の復活"
+ fate_of_AUS.2.1:0 "大公国として解放"
+ fate_of_AUS.2.2:0 "公国として解放"
+ fate_of_AUS.2.3:0 "共和国として解放"
+ fate_of_AUS.3.t:0 "オーストリアの運命-チロル地方"
+ fate_of_AUS.3.d:0 ""
+ fate_of_AUS.3.0:0 "北部はオーストリアだろう"
+ fate_of_AUS.3.1:0 "全域オーストリアだろう"
+ fate_of_AUS.3.2:0 "ここはオーストリアではない"
+ fate_of_AUS.4.t:0 "オーストリアの運命-ズデーテン地方"
+ fate_of_AUS.4.d:0 ""
+ fate_of_AUS.4.0:0 "南部はオーストリアだろう"
+ fate_of_AUS.4.1:0 "全域オーストリアだろう"
+ fate_of_AUS.4.2:0 "ここはオーストリアではない"
+ fate_of_AUS.5.t:0 "オーストリアの運命-ブルゲンラント地方"
+ fate_of_AUS.5.d:0 ""
+ fate_of_AUS.5.0:0 "東部はオーストリアだろう"
+ fate_of_AUS.5.1:0 "全域オーストリアだろう"
+ fate_of_AUS.5.2:0 "ここはオーストリアではない"
+ 
+ fate_of_BAY.1.t:0 "バイエルンの運命"
+ fate_of_BAY.1.d:0 "占領したバイエルン地域をどのようにすべきだろうか。"
+ fate_of_BAY.1.0:0 "バイエルンに従順な国家を"
+ fate_of_BAY.1.1:0 "過去の栄光を取り戻してやってもよいだろう"
+ fate_of_BAY.1.2:0 "新たなる栄光を与えてやろう"
+ fate_of_BAY.2.t:0 "バイエルンの運命-政体"
+ fate_of_BAY.2.d:0 ""
+ fate_of_BAY.2.0:0 "王国として解放"
+ fate_of_BAY.2.1:0 "公国として解放"
+ fate_of_BAY.2.2:0 "共和国として解放"
+  
+ release_BEL:0 "ベルギーの運命"
+ fate_of_BEL.1.t:0 "ベルギーの運命"
+ fate_of_BEL.1.d:0 "占領したベルギー地域をどのようにすべきだろうか。"
+ fate_of_BEL.1.0:0 "ベルギー地域に従順な国家を"
+ fate_of_BEL.1.1:0 "ベルギーと周辺諸地域に従順な国家を"
+ fate_of_BEL.1.2:0 "ベルギーの地域ごとに決定せよ"
+ fate_of_BEL.1.3:0 "友邦に領土を与えよ"
+ fate_of_BEL.2.t:0 "ベルギーの運命-政体"
+ fate_of_BEL.2.d:0 ""
+ fate_of_BEL.2.0:0 "王国として解放"
+ fate_of_BEL.2.1:0 "フランドル＝ワロン地域の王国として解放"
+ fate_of_BEL.2.2:0 "ベルギー合衆国の復活"
