リヒテンシュタイン及びアラスカ連合侯国

--- a/localisation/_geacps_release_l_english.yml
+++ b/localisation/_geacps_release_l_english.yml
@@ -162,3 +162,23 @@
  fate_of_BEL.2.0:0 "王国として解放"
  fate_of_BEL.2.1:0 "フランドル＝ワロン地域の王国として解放"
  fate_of_BEL.2.2:0 "ベルギー合衆国の復活"
+ 
+ release_ALS:0 "アラスカの運命"
+ fate_of_ALS.1.t:0 "アラスカの運命"
+ fate_of_ALS.1.d:0 "占領したアラスカ地域をどのようにすべきだろうか。"
+ fate_of_ALS.1.0:0 "アラスカ地域に従順な国家を"
+ fate_of_ALS.1.1:0 "友邦に領土を与えよ"
+ fate_of_ALS.2.t:0 "アラスカの運命-政体"
+ fate_of_ALS.2.d:0 ""
+ fate_of_ALS.2.0:0 "共和国として解放"
+ fate_of_ALS.2.1:0 "新たなるアメリカの誕生を"
+ fate_of_ALS.2.2:0 "植民地政府を樹立"
+ fate_of_ALS.2.3:0 "リヒテンシュタイン＝アラスカの成立を宣言だ"
+ fate_of_ALS.2.4:0 "同君主の新たな政府を樹立"
+ fate_of_ALS.3.t:0 "アラスカの運命"
+ fate_of_ALS.3.d:0 ""
+ fate_of_ALS.3.0:0 "ロシアに与えよう"
+ fate_of_ALS.3.1:0 "アメリカに与えよう"
+ fate_of_ALS.3.2:0 "カナダに与えよう"
+ fate_of_ALS.3.3:0 "リヒテンシュタイン侯殿下に彼の地を…"
+
