--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1239,8 +1239,8 @@
  KAR_republic:0 "カレリア共和国"
  KAR_republic_DEF:0 "カレリア共和国"
  
- LIE_principality:0 "リヒテンシュタイン公国"
- LIE_principality_DEF:0 "リヒテンシュタイン公国"
+ LIE_principality:0 "リヒテンシュタイン侯国"
+ LIE_principality_DEF:0 "リヒテンシュタイン侯国"
  
  MCO_principality:0 "モナコ公国"
  MCO_principality_DEF:0 "モナコ公国"
