--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -126,6 +126,10 @@
  HOLY-MOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
  HOLY-MOUNTAIN_autonomous_monastic_state_ADH:0 "聖なる山"
  
+ LIEandALS_united_principality:0 "リヒテンシュタイン及びアラスカ連合侯国"
+ LIEandALS_united_principality_DEF:0 "リヒテンシュタイン及びアラスカ連合侯国"
+ LIEandALS_united_principality_ADJ:0 "リヒテンシュタイン及びアラスカ"
+ 
  MEK-SCHWERIN_grand_duchy:0 "メクレンブルク＝シュヴェリーン大公国"
  MEK-SCHWERIN_grand_duchy_DEF:0 "メクレンブルク＝シュヴェリーン大公国"
  MEK-SCHWERIN_grand_duchy_ADJ:0 "メクレンブルク＝シュヴェリーン"
