--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -14,26 +14,42 @@
  JAP_3:0 ""
  JAP_4:0 ""
  JAP_5:0 ""
- JAP_Treaty_of_Mutual_Cooperation_and_Security_Between_the_United_States_and_Japan:0 "日本国及米国間相互協力及安全保障条約"
+ JAP_Treaty_of_Mutual_Cooperation_and_Security_Between_the_United_States_and_Japan:0 "日本國及米國間相互協力及安全保障条約"
  JAP_Mitsumasa_Yonai:0 "米内光政"
- JAP_6:0 ""
- JAP_7:0 ""
- JAP_8:0 ""
- JAP_9:0 ""
+ JAP_Yonai_Diplomacy:0 "米内外交"
+ JAP_Red_Empire:0 "赤い帝國"
+ JAP_Relations_with_Eastern_countries:0 "東側諸国との関係"
+ JAP_Treaty_of_Friendship_and_Mutual_Assistance_between_the_Soviet_Union_and_Japan:0 "日本國及ソヴイエト連邦間ノ友好、同盟及相互援助条約"
+ JAP_Arita-Molotov_Agreement:0 "有田・モロトフ協定"
+ JAP_Thawing:0 "雪解け"
+ JAP_The_Soviet-Japanese_Alliance:0 "ユーラシア枢軸国"
+ JAP_Breakwater_against_the_red:0 "赤に対する防波堤"
+ JAP_Freedom_to_light_up_West_Africa:0 "西比利亜を照らす自由"
+ JAP_Cooperation_with_Western_countries:0 "西側諸国との協力"
+ JAP_Independent_garrison_to_West_Hialeah:0 "独立守備隊を西比利亜へ"
+ JAP_Extension_of_the_Heilongjiang_Railway_to_Lake_Kaijia:0 "貝加爾湖・黒龍江鉄道の延伸"
+ JAP_Friendship_with_Siberia:0 "日西共栄"
+ JAP_Cossack_Country:0 "コサックの國"
+ JAP_Support_for_Ataman:0 "アタマンの支援"
+ JAP_Dispatch_of_military_advisers:0 "軍事顧問団の派遣"
+ JAP_Investment_in_the_Heilongjiang_Railway_Kaji_Lake:0 "貝加爾湖・黒龍江鉄道に投資"
+ JAP_Friendship_with_Chita:0 "日知共栄"
+ JAP_A_true_peace-lover:0 "真の平和愛好者"
  JAP_10:0 ""
- JAP_The_Soviet-Japanese_Alliance:0 "日ソ同盟"
+ JAP_11:0 ""
+ JAP_12:0 ""
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Suzuki_Diplomacy:0 "鈴木外交"
- JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英国国王の王冠にはめ込まれた最大の宝石"
+ JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英國國王の王冠にはめ込まれた最大の宝石"
  JAP_Joint_exercises_with_British_and_Indian_forces:0 "英印軍との合同演習"
  JAP_Signing_of_the_India-Japan_Trade_Agreement:0 "日印貿易協定の締結"
  JAP_A_free_and_open_Indian_Ocean:0 "自由で開かれた印度洋"
- JAP_And_another_land_where_the_sun_never_sets:0 "そしてもう一つの太陽の沈まぬ国"
+ JAP_And_another_land_where_the_sun_never_sets:0 "そしてもう一つの太陽の沈まぬ國"
  JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
  JAP_British_Malaya_Tin:0 "英領マラヤの錫"
  JAP_Establishment_of_the_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所の設立"
  JAP_Establishment_of_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会の設置"
- JAP_Joint_exercises_with_the_Royal_Navy:0 "英国海軍との合同演習"
+ JAP_Joint_exercises_with_the_Royal_Navy:0 "英國海軍との合同演習"
  JAP_The_Pacific_Ocean_is_as_the_name_suggests_an_ocean_of_peace:0 "太平洋は名の如く平和の洋"
  JAP_Relationship_with_Australasia:0 "オーストララシアとの関係"
  JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
@@ -54,7 +70,7 @@
  JAP_Enactment_of_trade_union_law:0 "労働組合法の制定"
  JAP_Agricultural_Land_Reform:0 "農地改革"
  JAP_Education_Reform:0 "教育改革"
- JAP_The_liberal_states_of_the_East:0 "東洋の自由主義国家"
+ JAP_The_liberal_states_of_the_East:0 "東洋の自由主義國家"
  JAP_Democracy:0 "民主主義"
  JAP_Minpon_Shugi:0 "民本主義"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
@@ -65,7 +81,7 @@
  JAP_Support_for_the_Malayan_People's_Anti-British_Army:0 "マラヤ人民抗英軍の支援"
  JAP_Education_for_the_Borneo_Volunteer_Army:0 "ボルネオ義勇軍の教育"
  JAP_The_Southern_Approach:0 "南進論"
- JAP_Our_relationship_with_the_collapsed_free_world:0 "崩壊した自由の国との関係"
+ JAP_Our_relationship_with_the_collapsed_free_world:0 "崩壊した自由の國との関係"
  JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "フィリピンでのスペイン語の使用の禁止を撤回"
  JAP_Timor_return:0 "ティモール返還"
  JAP_Alaska_heights_expand:0 "阿拉斯加へ影響力拡大"
@@ -74,15 +90,15 @@
  JAP_The_relationship_with_the_missing_red_star:0 "欠けた赤い星との関係"
  JAP_Eliminating_the_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_Supporting_Cossacks_in_the_Far_East:0 "極東のコサックを支援"
- JAP_Management_of_the_Baikal-Amur_Railway:0 "バイカル・アムール鉄道の経営"
+ JAP_Management_of_the_Baikal-Amur_Railway:0 "貝加爾・黒龍江鉄道株式会社の設立"
  JAP_The_North_Advancement_Theory:0 "北進論"
- JAP_No_more_Anglo-American_and_Soviet-oriented_imperialism:0 "英米ソ本位の帝国主義を排す"
+ JAP_No_more_Anglo-American_and_Soviet-oriented_imperialism:0 "英米ソ本位の帝國主義を排す"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Cooperation_of_the_Imperialists:0 "皇道派の協力"
- JAP_A_blow_to_the_nation:0 "国家に対する打撃"
+ JAP_A_blow_to_the_nation:0 "國家に対する打撃"
  JAP_Suspension_of_the_Constitution:0 "憲法の停止"
  JAP_Dissolution_of_both_Houses:0 "両院を解散"
- JAP_Martial_law_throughout_the_country:0 "全国での戒嚴令"
+ JAP_Martial_law_throughout_the_country:0 "全國での戒嚴令"
  JAP_Start_of_the_Showa_Restoration:0 "昭和維新を開始"
  JAP_Elimination_of_the_privileged_class:0 "特権階級の排除"
  JAP_Formation_of_Konoe_New_Party:0 "近衛新党を結成"
@@ -91,7 +107,7 @@
  JAP_Building_the_Pacific_Economic_Bloc:0 "太平洋経済ブロックの構築"
  JAP_Don't_miss_the_bus:0 "バスに乗り遅れるな"
  JAP_Abolition_of_the_private_property_system:0 "私有財産制の廃止"
- JAP_Competition_with_the_imperialist_powers:0 "帝国主義列強との競争"
+ JAP_Competition_with_the_imperialist_powers:0 "帝國主義列強との競争"
  JAP_Cooperation_of_control_groups:0 "統制派の協力"
  JAP_Establishment_of_Greater_East_Asia_Common_Economic_Area:0 "大東亜共同経済圏を確立"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
