--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1103,6 +1103,10 @@
  DAL_DEF:0 "ダルマチア"
  DAL_ADJ:0 "ダルマチア"
  
+ DNZ:0 "ダンツィヒ"
+ DNZ_DEF:0 "ダンツィヒ"
+ DNZ_ADJ:0 "ダンツィヒ"
+ 
  DON:0 "ドン"
  DON_DEF:0 "ドン"
  DON_ADJ:0 "ドン"
