--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1218,6 +1218,9 @@
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
  
+ DNZ_free_city:0 "自由都市ダンツィヒ"
+ DNZ_free_city_DEF:0 "自由都市ダンツィヒ"
+ 
  DON_republic:0 "ドン共和国"
  DON_republic_DEF:0 "ドン共和国"
  
