--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -26,18 +26,19 @@
  JAP_Breakwater_against_the_red:0 "赤に対する防波堤"
  JAP_Freedom_to_light_up_West_Africa:0 "西比利亜を照らす自由"
  JAP_Cooperation_with_Western_countries:0 "西側諸国との協力"
- JAP_Independent_garrison_to_West_Hialeah:0 "独立守備隊を西比利亜へ"
+ JAP_Support_for_the_Siberian_Autonomous_Regiment:0 "西比利亜自治團の支援"
+ JAP_Sending_an_independent_garrison:0 "独立守備隊を派遣"
+ JAP_Investment_in_the_Heilongjiang_Railway_Kaji_Lake:0 "貝加爾湖・黒龍江鉄道に投資"
+ JAP_Investment_in_Ussuri_Railway:0 "烏蘇里鉄道に投資"
  JAP_Extension_of_the_Heilongjiang_Railway_to_Lake_Kaijia:0 "貝加爾湖・黒龍江鉄道の延伸"
  JAP_Friendship_with_Siberia:0 "日西共栄"
  JAP_Cossack_Country:0 "コサックの國"
  JAP_Support_for_Ataman:0 "アタマンの支援"
  JAP_Dispatch_of_military_advisers:0 "軍事顧問団の派遣"
- JAP_Investment_in_the_Heilongjiang_Railway_Kaji_Lake:0 "貝加爾湖・黒龍江鉄道に投資"
  JAP_Friendship_with_Chita:0 "日知共栄"
  JAP_A_true_peace-lover:0 "真の平和愛好者"
- JAP_10:0 ""
- JAP_11:0 ""
- JAP_12:0 ""
+ JAP_Naval_Conscience:0 "海軍の良識派"
+ JAP_Military_control:0 "陸軍の制御"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Suzuki_Diplomacy:0 "鈴木外交"
  JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英國國王の王冠にはめ込まれた最大の宝石"
