--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 #シナリオ
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
- THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。\n\n太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n\n果たして我が国の未来は繁栄か没落か。"
+ THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。\n太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。\n\n政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n\n果たして我が国の未来は繁栄か没落か。"
  
  THE_CHAOS_OF_EUROPE_NAME:0 "混沌の欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n\n先の大戦では肥大化したドイツとイタリア、及びそれらの同盟国の崩壊に成功した。しかし、戦勝国の独自路線が仇となり、戦後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。以前の支配者は、大きく三つに分断され、その最大の同盟国は、南部が支配から脱した。\nバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では、イギリスとフランスの海峡を超えた対立が激化しようとしていたのだった..."
+ THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦では肥大化したドイツとイタリア、及びそれらの同盟国の崩壊に成功した。しかし、戦勝国の独自路線が仇となり、戦後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。以前の支配者は、大きく三つに分断され、その最大の同盟国は、南部が支配から脱した。\nバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では、イギリスとフランスの海峡を超えた対立が激化しようとしていたのだった..."
  
 #各国の説明
  ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
@@ -20,7 +20,7 @@
  MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MAN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。 戦前, 日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。 天皇陛下万歳！大日本帝国万歳！"
+ JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。\n戦前、日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し、南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。\n我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
  AST_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  
  TUR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
