--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -38,7 +38,12 @@
  JAP_Friendship_with_Chita:0 "日知共栄"
  JAP_A_true_peace-lover:0 "真の平和愛好者"
  JAP_Naval_Conscience:0 "海軍の良識派"
- JAP_Military_control:0 "陸軍の制御"
+ JAP_Retaliation_for_big_angle_appointments:0 "大角人事の報復"
+ JAP_The_return_of_the_leftist_trio:0 "左派トリオの復活"
+ JAP_Guardians_of_the_Pacific:0 "太平洋の守護者"
+ JAP_Abolition_of_the_active_military_service_system_of_the_Minister_of_War:0 "軍部大臣現役武官制の廃止"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
+ JAP_Resolution_of_the_question_of_the_drought_of_the_Admiralty:0 "統帥権干犯問題の解決...?"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Suzuki_Diplomacy:0 "鈴木外交"
  JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英國國王の王冠にはめ込まれた最大の宝石"
@@ -61,7 +66,7 @@
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Implementation_of_civilian_control:0 "文民統制の実施"
  JAP_Hedgehog_Defence_Theory:0 "針鼠防衛論"
- JAP_Anti-communist_bulwark:0 "反共の防波堤"
+ JAP_Anti-communist_JAPwark:0 "反共の防波堤"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Towa_No_Heiwa:0 "永遠の平和"
  JAP_Start_of_liberalisation:0 "自由化の開始"
@@ -265,3 +270,39 @@
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
  national_policy_research_outline_desc:0 "国策研究大綱"
+ 
+ JAP_military_clique:0 "軍閥"
+ JAP_military_clique_desc:0 "軍閥"
+ JAP_ui_faction_header:0 "派閥"
+ JAP_ui_loyalty_header:0 "忠誠"
+ JAP_ui_popularity_header:0 "支持率"
+ JAP_zveno_loyalty_status:0 "[GetZvenoLoyaltyStatus]"
+ JAP_zveno_loyalty_status_amount:0 "[?JAP.JAP_zveno_loyalty|0]"
+ JAP_bs_loyalty_status:0 "[GetBsLoyaltyStatus]"
+ JAP_bs_loyalty_status_amount:0 "[?JAP.JAP_bs_loyalty|0]"
+ JAP_bzns_loyalty_status:0 "[GetBznsLoyaltyStatus]"
+ JAP_bzns_loyalty_status_amount:0 "[?JAP.JAP_bzns_loyalty|0]"
+ JAP_nsm_loyalty_status:0 "[GetNsmLoyaltyStatus]"
+ JAP_nsm_loyalty_status_amount:0 "[?JAP.JAP_nsm_loyalty|0]"
+ JAP_zveno_popularity_status:0 "[GetZvenoPopularityStatus]"
+ JAP_zveno_popularity_status_amount:0 "[?JAP.JAP_zveno_popularity|0]"
+ JAP_bs_popularity_status:0 "[GetBsPopularityStatus]"
+ JAP_bs_popularity_status_amount:0 "[?JAP.JAP_bs_popularity|0]"
+ JAP_bzns_popularity_status:0 "[GetBznsPopularityStatus]"
+ JAP_bzns_popularity_status_amount:0 "[?JAP.JAP_bzns_popularity|0]"
+ JAP_nsm_popularity_status:0 "[GetNsmPopularityStatus]"
+ JAP_nsm_popularity_status_amount:0 "[?JAP.JAP_nsm_popularity|0]"
+ JAP_loyalty_status_crushed:0 "§g粉砕された§!"
+ JAP_loyalty_status_integrated:0 "§g統合された§!"
+ JAP_popularity_status_crushed:0 "$JAP_loyalty_status_crushed$"
+ JAP_popularity_status_integrated:0 "$JAP_loyalty_status_integrated$"
+ JAP_zveno_name_text:0 "ズヴェノ"
+ JAP_bs_name_text:0 "社会民主労働者党広義派"
+ JAP_bzns_name_text:0 "農民同盟"
+ JAP_nsm_name_text:0 "国家社会主義運動"
+ JAP_ZVENO_TOOLTIP:0 "£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らによって設立された国家主義組織で現在、キモン・ゲオルギエフに率いられている。\n£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らに組織参加を呼びかけており、時間がたてば、政府にクーデターを起こして、軍政を敷くこともできるだろう。"
+ JAP_BS_TOOLTIP:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!は幅広い層に支持される社会民主主義同盟である。\n£faction_JAP_bs §Y社会民主労働者党広義派§!は工場労働者や組合に大きな影響力を持っており、彼らが政府に対して不誠実であればゼネストを呼びかけるだろう。"
+ JAP_BZNS_TOOLTIP:0 "£faction_JAP_bzns §Y農民同盟§!は1934年に禁止された政治団体で、農業問題に専念している。\n£faction_JAP_bzns §Y農民同盟§!は国内の農村地域で大きな影響力を持っており、農民の間で人気を得ようとしている。"
+ JAP_NSM_TOOLTIP:0 "£faction_JAP_nsm §Y国家社会主義運動§!は元ズヴェノのアレクサンダル・ツァンコフ率いる極右組織である。\n£faction_JAP_nsm §Y国家社会主義運動§!は全国各地でデモや抗議活動を行うことで、大衆の人気を得ようとしている。"
+ JAP_LOYALTY_TOOLTIP:0 "§Y忠誠心§!は派閥が政府に協力する意向を表している。\n§Y忠誠心§!が高いほど、派閥が政府に立ち向かう可能性は低くなる。\n派閥を政府に統合するには、特定のディシジョンを完了することで、その構成員を政府と連携させ、§Y忠誠心§!を100まで上昇させる必要がある。"
+ JAP_POPULARITY_TOOLTIP:0 "§Y支持率§!は派閥が特定の人口層（軍、労働者、農民、急進右翼）から受ける支持を表している。\n§Y支持率§!が高いほど、派閥が政府に立ち向かう可能性は高くなる。\n派閥を撲滅するためには、特定のディシジョンを完了することで、派閥を弱体化させて§Y支持率§!を0まで減らす必要がある。"
