--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -983,6 +983,8 @@
  VICTORY_POINTS_13276:0 "ヤナム"
  VICTORY_POINTS_3422:0 "チャンネル諸島"
  VICTORY_POINTS_1822:0 "マハーバード"
+ VICTORY_POINTS_4041:0 "吉首"
+ VICTORY_POINTS_4823:0 "アルタイ"
  
 #台湾
  VICTORY_POINTS_7186:0 "台北"
