--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -91,6 +91,10 @@
  CHI_republic_radical_socialism_DEF:0 "中華人民共和国"
  CHI_soviet_democratic_republic:0 "中華ソビエト民主共和国"
  CHI_soviet_democratic_republic_DEF:0 "中華ソビエト民主共和国"
+ CHI_shonan_soviet_government:0 "湘南ソビエト政府"
+ CHI_shonan_soviet_government_DEF:0 "湘南ソビエト政府"
+ CHI_xinjiang_soviet_government:0 "新疆ソビエト政府"
+ CHI_xinjiang_soviet_government_DEF:0 "新疆ソビエト政府"
  
  GEO_democratic_republic:0 "グルジア民主共和国"
  GEO_democratic_republic_DEF:0 "グルジア民主共和国"
