--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -95,6 +95,8 @@
  CHI_shonan_soviet_government_DEF:0 "湘南ソビエト政府"
  CHI_xinjiang_soviet_government:0 "新疆ソビエト政府"
  CHI_xinjiang_soviet_government_DEF:0 "新疆ソビエト政府"
+ CHI_qinghai_soviet_government:0 "青海ソビエト政府"
+ CHI_qinghai_soviet_government_DEF:0 "青海ソビエト政府"
  
  GEO_democratic_republic:0 "グルジア民主共和国"
  GEO_democratic_republic_DEF:0 "グルジア民主共和国"
