Graveyard of empires
何故かideaが追加されない...

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -993,3 +993,11 @@
  
 #ギリシャ
  VICTORY_POINTS_13307:0 "カリエス"
+ 
+#アフガニスタン
+ VICTORY_POINTS_12314:0 "クンドゥーズ"
+ VICTORY_POINTS_7584:0 "シェベルガーン"
+ VICTORY_POINTS_10852:0 "プリ・フムリー"
+ VICTORY_POINTS_12831:0 "ジャラーラーバード"
+ VICTORY_POINTS_12248:0 "マザーリシャリーフ"
+ VICTORY_POINTS_5064:0 "カンダハール"
