--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -285,6 +285,17 @@
  SAU_national_populism_party:0 "諮問評議会"
  
 #ヨーロッパ
+ ATS_total_socialism_party:0 "ギリシャ共産党"
+ ATS_radical_socialism_party:0 "社会党"
+ ATS_social_democracy_party:0 "自由党"
+ ATS_social_liberalism_party:0 "国民政治同盟"
+ ATS_classical_liberalism_party:0 "農業者連合"
+ ATS_liberal_conservatism_party:0 "ギリシャ国民党"
+ ATS_social_conservatism_party:0 "ナショナリスト連合"
+ ATS_authoritative_democracy_party:0 "全国自由党"
+ ATS_reactionary_authoritarianism_party:0 "神聖な共同体"
+ ATS_national_populism_party:0 "団体X"
+ 
  BEL_total_socialism_party:0 "ベルギー共産党"
  BEL_radical_socialism_party:0 "ベルギー共産党"
  BEL_social_democracy_party:0 "ベルギー社会党"
