--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -110,6 +110,10 @@
  AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_ADJ:0 "オーストリア＝ハンガリー"
  
+ ATS_monastic_republic:0 "アトス自治修道士共和国"
+ ATS_monastic_republic_DEF:0 "アトス自治修道士共和国"
+ ATS_monastic_republic_ADJ:0 "アトス"
+ 
  BATAVIA_republic:0 "バタビア共和国"
  BATAVIA_republic_DEF:0 "バタビア共和国"
  BATAVIA_republic_ADJ:0 "バタビア"
