--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -442,6 +442,17 @@
  USA_reactionary_authoritarianism_party:0 ""
  USA_national_populism_party:0 "州権民主党"
  
+ MEX_total_socialism_party:0 "メキシコ共産党"
+ MEX_radical_socialism_party:0 "メキシコ労働者総連合"
+ MEX_social_democracy_party:0 "メキシコ民主党"
+ MEX_social_liberalism_party:0 "メキシコ革命党"
+ MEX_classical_liberalism_party:0 ""
+ MEX_liberal_conservatism_party:0 "国民行動党"
+ MEX_social_conservatism_party:0 ""
+ MEX_authoritative_democracy_party:0 "軍事政権"
+ MEX_reactionary_authoritarianism_party:0 "軍事政権"
+ MEX_national_populism_party:0 "国家シナキズム連合"
+ 
 #######
 #アジア
  
